tests/empty_type.coop.ref
Syntax error at file "./empty_type.coop", line 19, charaters 16-27:
unknown identifier print_value

