tests/empty_type.coop
signal boom of unit

let rec f (x : int) : empty ! {boom} = boom ()

let g (x : int) =
  using (runner {} @ unit) @ () run
    (match f x with {}) : int ! {boom}
  finally {
  | val x @ _ -> x
  | boom _ @ _ -> boom ()
  }
;;

using stdio ;;

using (runner {} @ unit) @ () run
  g 43
finally {
 | val x @ _ -> print_value x
 | boom _ @ _ -> print_string "Boom!\n"
}